--- a/layouts/register/single.html
+++ b/layouts/register/single.html
@@ -19,7 +19,7 @@
 
             <fieldset class="register-fieldset">
               <div class="register-form-field">
-                <label class="register-form-label">Email:
+                <label class="register-form-label">{{ i18n "Email" }}:
                   <input class="register-form-input" name="email" type="email" placeholder="jane.doe@email.com" autofocus />
                 </label>
               </div>
@@ -28,41 +28,42 @@
             <fieldset class="register-fieldset">
               <div class="register-field-row">
                 <div class="register-form-field">
-                  <label class="register-form-label">First Name:
+                  <label class="register-form-label">{{ i18n "First Name"}}:
                     <input class="register-form-input" name="first_name" type="text" placeholder="Jane" />
                   </label>
                 </div>
 
                 <div class="register-form-field">
-                  <label class="register-form-label">Last Name:
+                  <label class="register-form-label">{{ i18n "Last Name" }}:
                     <input class="register-form-input" name="last_name" type="text" placeholder="Doe" />
                   </label>
                 </div>
               </div>
 
               <div class="register-form-field">
-                <label class="register-form-label">Date of Birth:
-                  <input class="register-form-input" name="date_of_birth" type="text" placeholder="01/31/1990"  data-widget="datepicker" />
+                <label class="register-form-label">{{ i18n "Date of Birth" }}:
+                  {{ $date_format := .Page.Param "dateformat" }}
+                  <input class="register-form-input" name="date_of_birth" type="text" placeholder="{{ time.Format (string $date_format) "1990-01-31" }}"  data-widget="datepicker" />
                 </label>
               </div>
             </fieldset>
 
             <fieldset class="register-fieldset">
               <div class="register-form-field">
-                <label class="register-form-label">Address:
+                <label class="register-form-label">{{ i18n "Address" }}:
                   <input class="register-form-input" name="address" type="text" placeholder="Masarykova 42" />
                 </label>
               </div>
               <div class="register-field-row">
                 <div class="register-form-field">
-                  <label class="register-form-label">City:
+                  <label class="register-form-label">{{ i18n "City" }}:
                     <input class="register-form-input" name="city" type="text" placeholder="Brno" />
                   </label>
                 </div>
 
                 <div class="register-form-field small">
-                  <label class="register-form-label">Postal Code:
-                    <input class="register-form-input" name="postal_code" type="text" placeholder="602 00" />
+                  <label class="register-form-label">{{ i18n "Postal Code" }}:
+                    <input class="register-form-input" name="postal_code" type="text" placeholder="602 00" data-format="... .." />
                   </label>
                 </div>
               </div>
@@ -70,8 +71,8 @@
 
             <fieldset class="register-register-fieldset">
               <div class="register-form-field">
-                <label class="register-form-label">Phone Number:
-                  <input class="register-form-input" name="phone_number" type="text" placeholder="+420 777 555 123" />
+                <label class="register-form-label">{{ i18n "Phone Number" }}:
+                  <input class="register-form-input" name="phone_number" type="text" placeholder="+420 777 555 123" data-format=".... ... ... ..."/>
                 </label>
               </div>
             </fieldset>
@@ -79,13 +80,13 @@
             <fieldset class="register-fieldset">
               <div class="register-field-row">
                 <div class="register-form-field">
-                  <label class="register-form-label">Company:
+                  <label class="register-form-label">{{ i18n "Company" }}:
                     <input class="register-form-input" name="company" type="text" placeholder="Pied Piper" />
                   </label>
                 </div>
 
                 <div class="register-form-field">
-                  <label class="register-form-label">Occupation:
+                  <label class="register-form-label">{{ i18n "Occupation" }}:
                     <input class="register-form-input" name="occupation" type="text" placeholder="CEO" />
                   </label>
                 </div>
@@ -101,7 +102,7 @@
 
         <div class="register-form-footer-content">
           <aside id="registration-qr-container" class="register-form-footer-left">
-            <h4>Finish on mobile</h4>
+            <h4>{{ i18n "Continue on mobile" }}</h4>
           </aside>
 
           <aside class="register-form-footer-right">
@@ -110,36 +111,36 @@
               <x-sign class="register-signature">
                 <div class="register-signature-default">
                   <div class="register-signature-default-btns">
-                    <button data-role="sign" type="button">Sign</button>
-                    <button data-role="upload" type="button">Upload</button>
+                    <button data-role="sign" type="button">{{ i18n "Sign" }}</button>
+                    <button data-role="upload" type="button">{{ i18n "Upload" }}</button>
                     <button class="register-signature-clear-btn" data-role="clear" type="button">Clear</button>
                   </div>
-                  <span class="register-signature-drag-info">Or drag &amp; drop image in this place</button>
+                  <span class="register-signature-drag-info">{{ i18n "dnd in place" }}</button>
                 </div>
 
                 <div class="register-signature-signing">
-                  <button data-role="undo" type="button">Undo</button>
-                  <button data-role="clear" type="button">Clear</button>
-                  <button data-role="cancel" type="button">Cancel</button>
-                  <button class="register-signature-confirm-btn" data-role="confirm" type="button">Confim</button>
+                  <button data-role="undo" type="button">{{ i18n "Undo" }}</button>
+                  <button data-role="clear" type="button">{{ i18n "Clear" }}</button>
+                  <button data-role="cancel" type="button">{{ i18n "Cancel" }}</button>
+                  <button class="register-signature-confirm-btn" data-role="confirm" type="button">{{ i18n "Confirm" }}</button>
                 </div>
 
                 <div class="register-signature-drag">
-                  Drop Image
+                  {{ i18n "Drop Image" }}
                 </div>
               </x-sign>
-              <span class="registration-signature-label">Your signature</span>
+              <span class="registration-signature-label">{{ i18n "Your Signature" }}</span>
             </div>
           </aside>
         </div>
 
         <div class="register-form-confirmation">
           <label class="register-approve">
-            <input type="checkbox" name="accept"></input>
-            I accept the Statute of Trade union of ICT workers and the terms and conditions.
+            <input id="register-accept-statutes" type="checkbox" name="accept"></input>
+            {{ .Page.Param "approveLabel" | safeHTML }}
           </label>
 
-          <button class="registration-submit-btn" type="submit">Submit</button>
+          <button class="registration-submit-btn" type="submit">{{ i18n "Submit" }}</button>
         </div>
 
         </div>
