implement formatting by type in registration form (#31)

--- a/layouts/register/single.html
+++ b/layouts/register/single.html
@@ -63,7 +63,7 @@
 
                 <div class="register-form-field small">
                   <label class="register-form-label">{{ i18n "Postal Code" }}:
-                    <input class="register-form-input" name="postal_code" type="text" placeholder="602 00" data-format="... .." />
+                    <input class="register-form-input" name="postal_code" type="text" placeholder="602 00" data-formatter="postal_code" />
                   </label>
                 </div>
               </div>
@@ -72,7 +72,7 @@
             <fieldset class="register-register-fieldset">
               <div class="register-form-field">
                 <label class="register-form-label">{{ i18n "Phone Number" }}:
-                  <input class="register-form-input" name="phone_number" type="text" placeholder="+420 777 555 123" data-format=".... ... ... ..."/>
+                  <input class="register-form-input" name="phone_number" type="text" placeholder="+420 777 555 123" data-formatter="phone_number" />
                 </label>
               </div>
             </fieldset>
