--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
   {{ partial "home-header" . }}
 
   <section class="home-participate">
-    <main class="page-body">
+    <main class="home-page-body">
       <h2 class="home-participate-title">{{ .Param "home.participateTitle" }}</h2>
       <div class="col-container">
 
@@ -24,7 +24,7 @@
   </section>
 
   <section class="home-membership">
-    <main class="page-body">
+    <main class="home-page-body">
       <h2 class="home-membership-title">{{ .Param "home.membershipTitle" }}</h2>
       <div class="home-membership-description">
 
@@ -49,7 +49,7 @@
   </section>
 
   <section class="home-events">
-    <main class="page-body">
+    <main class="home-page-body">
       <h2 class="home-events-title">{{ .Param "home.eventsTitle" }}</h2>
       <div class="home-events-description">
 
