--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="site-footer">
-  <main class="page-body">
-    <div class="col-container">
-      <div class="column">
-        <h4 class="foot-title">{{ .Param "footer.learnMore" }}</h4>
+  <main class="site-footer-page-body">
+    <div class="site-footer-col-container">
+      <div class="site-footer-column">
+        <h4 class="site-footer-title">{{ .Param "footer.learnMore" }}</h4>
         <ul class="page-foot-nav-ul">
           <li>
             <a href="{{ ref . "/" }}">{{ .Param "navigation.home" }}</a>
@@ -25,10 +25,10 @@
         </ul>
       </div>
 
-      <div class="column">
-        <h4 class="foot-title">{{ .Param "footer.socials" }}</h4>
-        <h4 class="foot-title">{{ .Param "footer.languages" }}</h4>
-        <ul class="page-foot-nav-ul">
+      <div class="site-footer-column">
+        <h4 class="site-footer-title">{{ .Param "footer.socials" }}</h4>
+        <h4 class="site-footer-title">{{ .Param "footer.languages" }}</h4>
+        <ul class="site-footer-nav-ul">
           {{ $siteLanguages := site.Languages }}
           {{ $pageLang := .Page.Lang }}
           {{- range .Page.AllTranslations }}
@@ -47,10 +47,10 @@
         </ul>
       </div>
 
-      <div class="column">
-        <h4 class="foot-title">{{ .Param "footer.legal" }}</h4>
+      <div class="site-footer-column">
+        <h4 class="site-footer-title">{{ .Param "footer.legal" }}</h4>
         <p>{{ .Param "footer.legalNote" }}</p>
-        <ul class="page-foot-nav-ul">
+        <ul class="site-footer-nav-ul">
           <li>
             <a href="#">{{ .Param "footer.legalLink" }}</a>
           </li>
