--- a/layouts/events/single.html
+++ b/layouts/events/single.html
@@ -82,7 +82,13 @@
 
       <h3 class="event-detail-info-title">{{ i18n "Map" }}:</h3>
       <div class="event-detail-info-map">
-        <div id="map"></div>
+        <x-map
+            class="event-detail-map"
+            lat="{{ .Page.Param "lat" }}"
+            lng="{{ .Page.Param "lon" }}"
+            title="{{ .Page.Param "place" }}"
+            text="{{ .Page.Param "placeAddress" }}"
+          ></x-map>
         <div class="event-detail-info-coords">
           latitude: {{ .Page.Param "lat" }}</br>
           longitude: {{ .Page.Param "lon" }}
@@ -100,18 +106,6 @@
           </a>
         </div>
       </div>
-
-      <script type="text/javascript">
-        document.addEventListener("DOMContentLoaded", function() {
-          initMap({
-            elementId: "map",
-            lat: {{ .Page.Param "lat" }},
-            lng: {{ .Page.Param "lon" }},
-            title: {{ .Page.Param "place" }},
-            text: {{ .Page.Param "placeAddress" }},
-          });
-        });
-      </script>
     </aside>
   </div>
 {{ end }}
