--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,7 +65,7 @@
             </a>
           </h3>
           <div class="home-event-info">
-            <span class="home-event-date">{{ .Params.EventDate | time.Format ":date_short" }}</span>
+           {{ if isset .Params "EventDate" }}<span class="home-event-date">{{ .Params.EventDate | time.Format ":date_short" }}</span>{{ end }}
             <span class="home-event-place">{{ .Params.Place }}</span>
           </div>
           <div class="home-event-description">
