--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -188,6 +188,7 @@
     button {
         font-family: $main-font;
         background: $secondary-color;
+        color: $dark-color;
         width: 140px;
         border: 2px solid $primary-color;
         font-weight: 600;
