--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
       <h2 class="home-participate-title">{{ .Param "home.participateTitle" }}</h2>
       <div class="col-container">
 
-        {{ range (where .Site.RegularPages "Section" "home-participate") }}
+        {{ range  sort (where .Site.RegularPages "Section" "home-participate") "File.Path" }}
           <div class="home-participate-item">
             <h3 class="home-participate-item-title">{{ .Title }}</h3>
             <div class="home-participate-content">
@@ -35,7 +35,7 @@
       </div>
       <div class="col-container">
 
-        {{ range $index, $page := where .Site.RegularPages "Section" "home-membership" }}
+        {{ range $index, $page := sort (where .Site.RegularPages "Section" "home-membership") "File.Path" }}
           <div class="home-membership-item">
             <h3 class="home-membership-item-title">{{ $page.Title }}</h3>
             {{ $page.Content }}
