Enforce consistent formatting in CI (#70)
Just for sake of enforcing unified style so we minimize PRs that
reformat existing code/content.

There are plenty of [editor plugins](https://editorconfig.org/) you can
use to auto configure your editor.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -65,7 +65,9 @@
             </a>
           </h3>
           <div class="home-event-info">
-           {{ if .Param "eventDate" }}<span class="home-event-date">{{ .Params.EventDate | time.Format ":date_short" }}</span>{{ end }}
+            {{ if .Param "eventDate" }}
+              <span class="home-event-date">{{ .Params.EventDate | time.Format ":date_short" }}</span>
+            {{ end }}
             <span class="home-event-place">{{ .Params.Place }}</span>
           </div>
           <div class="home-event-description">
