--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -11,6 +11,40 @@
     padding-bottom: 32px;
 }
 
+.register-page-done {
+    display: flex;
+    flex-direction: column;
+    background: $secondary-color;
+    border-top: 6px solid $primary-color;
+    padding-top: 72px;
+    padding-bottom: 32px;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+}
+
+.register-done-home-link {
+    display: inline-block;
+    border: 4px solid $dark-color;
+    font-weight: 800;
+    color: $dark-color;
+    font-size: 26px;
+    padding: 12px 32px;
+    border-radius: 32px;
+    text-decoration: none;
+    margin-top: 32px;
+    text-align: center;
+
+    &:hover {
+        background: $primary-color;
+        color: $light-color;
+    }
+
+    @include tablet {
+        width: 100%;
+    }
+}
+
 .register-page-header-content {
     @include page-body;
 }
