Baseline api integration (#82)
This implements baseline integration with registration api... It only
supports happy path and and doesn't provide any fancy feedback.

--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -342,6 +342,10 @@
     @include register-form-breakpoint {
         align-self: stretch;
     }
+
+    &:disabled {
+        opacity: .5;
+    }
 }
 
 .register-form-fields {
