add validation messages (#87)
Implement validation errors in registration form.

TODO:
- translations
- refactoring

--- a/assets/scss/_configuration.scss
+++ b/assets/scss/_configuration.scss
@@ -10,3 +10,4 @@ $primary-color: #237fa8;
 $secondary-color: #ffc832;
 $darken-secondary-color: #E8B322;
 $ternary-color: #237FA8;
+$error-color: #ef1f1f;
