--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -131,6 +131,14 @@
     flex-direction: column;
     align-items: flex-end;
     padding-top: 32px;
+
+    .error-message {
+        color: $error-color;
+        text-align: center;
+        width: 100%;
+        margin-top: 6px;
+        text-transform: uppercase;
+    }
 }
 
 .register-signature-wrapper {
@@ -157,6 +165,10 @@
     height: 200px;
     flex-grow: 1;
     z-index: 2;
+
+    .error & {
+        border-color: $error-color;
+    }
 
     &.done {
         .register-signature-default {
@@ -361,6 +373,9 @@
 }
 
 .register-form-field {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
     width: 400px;
     max-width: 100%;
 
@@ -371,6 +386,10 @@
 
     &.small {
         width: 170px;
+    }
+
+    .error-message {
+        color: $error-color;
     }
 }
 
@@ -403,6 +422,10 @@
     &::placeholder {
         color: $light-color;
         opacity: 0.5;
+    }
+
+    &.error {
+        border-color: $error-color;
     }
 }
 
