--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -464,3 +464,16 @@
         background: $primary-color;
     }
 }
+
+#register-member-form {
+    .form-error {
+        @include page-body;
+        background-color: $error-color;
+        color: $light-color;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-weight: 800;
+        text-align: center;
+        margin-bottom: 32px;
+    }
+}
