Implement various prompts (#92)
This implements prompts around registration to help user.

- show notice that JS is required when it is turned off
- show notice that one has to agree with conditions when checkbox is not
checked

--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -347,6 +347,18 @@
     text-transform: uppercase;
 }
 
+.registration-submit-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-self: flex-end;
+
+    noscript {
+        color: $error-color;
+        font-weight: 600;
+    }
+}
+
 .registration-submit-btn {
     @include cta-btn;
     align-self: flex-end;
@@ -358,6 +370,11 @@
     &:disabled {
         opacity: .5;
     }
+}
+
+.registration-approve-notify {
+    color: $error-color;
+    font-weight: 600;
 }
 
 .register-form-fields {
