--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -494,3 +494,13 @@
         margin-bottom: 32px;
     }
 }
+
+.registration-complete-notice {
+    background: rgba($primary-color, .2);
+    width: 100%;
+    padding: 32px 64px;
+    border: 4px solid $primary-color;
+    font-weight: 600;
+    text-align: center;
+    line-height: 1.6em;
+}
