Source code changed from gtihub to tar file (#116)

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -64,7 +64,7 @@
     and
     <a target="_blank" href="//nixos.org">NixOS</a>.
     <br/>
-    Source code is <a taget="_blank" href="//github.com/ictunion/main-website">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.<br>
+    Source code is <a taget="_blank" href="{{ .Site.BaseURL }}downloads/source.tar.gz">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.<br>
     Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.
   </div>
 </section>
