Add support for social network links (#120)
related to https://github.com/ictunion/main-website/issues/117

This adds support for (social) icons.

License for the font doesn't specify anything but "free for personal
use".

--- a/assets/scss/_site-styles.scss
+++ b/assets/scss/_site-styles.scss
@@ -139,10 +139,15 @@ body {
 
 .site-footer-col-container {
     @include columns-container;
+
+    @include tablet {
+        gap: 12px;
+    }
 }
 
 .site-footer-column {
     @include column;
+    flex: 1 1 0px;
 }
 
 .site-footer-title {
@@ -166,6 +171,21 @@ body {
     margin: 0;
     line-height: 2em;
     font-weight: 400;
+}
+
+.site-footer-social-links {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+
+    a {
+        font-size: 32px;
+        text-decoration: none;
+
+        &:hover {
+            color: $secondary-color;
+        }
+    }
 }
 
 .site-software-note {
