--- a/layouts/partials/site-head.html
+++ b/layouts/partials/site-head.html
@@ -14,3 +14,7 @@
 {{ $style := $sass | resources.ToCSS $sass_options }}
 
 <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
+
+{{ range .AlternativeOutputFormats -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
