improve FAQ CSS (#126)
This improves/changes CSS for FAQ in few ways:

- headlines underline is now just bellow text not full line
- lists of items now use unicode symbols
- lists of items have different spacing and use slightly bolder font
(semi-bold)

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/layouts/faq/list.html
+++ b/layouts/faq/list.html
@@ -22,9 +22,11 @@
             {{ end }}
         ">
         <header class="faq-question ">
-          <h2 class="faq-question-text">
-            <a href="#{{ $item_id }}" class="faq-question-link">{{ $page.Title }}</a>
-          </h2>
+          <div class="faq-question-title">
+            <h2 class="faq-question-text">
+              <a href="#{{ $item_id }}" class="faq-question-link">{{ $page.Title }}</a>
+            </h2>
+          </div>
         </header>
         <div class="faq-answer">
           {{ $page.Content }}
