--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -1,7 +1,7 @@
 .faq-header {
     @include page-body;
     padding-top: 72px;
-    padding-bottom: 48px;
+    padding-bottom: 16px;
 }
 
 .faq-title {
@@ -51,8 +51,14 @@
     margin: 12px 0;
 }
 
-.faq-question-text {
+.faq-question-title {
     @include page-body;
+    display: flex;
+    align-items: flex-start;
+    line-height: 1.3em;
+}
+
+.faq-question-text {
     border-bottom: 6px solid $secondary-color;
     letter-spacing: -1px;
 }
@@ -64,7 +70,42 @@
 
 .faq-answer {
     @include page-body;
-    @include style-md;
+    @include has-links;
     line-height: 1.6em;
     font-size: 16px;
+
+    a {
+        font-weight: 600;
+    }
+
+    p {
+        @include pharagraph;
+        margin: 12px 0;
+    }
+
+    strong {
+        font-weight: 700;
+    }
+
+    em {
+        font-style: italic;
+    }
+
+    ul {
+        list-style-type: "\1F44D\0009";
+        padding: 0 0 0 48px;
+        font-weight: 600;
+
+        li {
+            margin: 6px 0;
+        }
+
+        .second & {
+            list-style-type: "\1F499\0009";
+        }
+    }
+
+    .first & a {
+        color: $secondary-color;
+    }
 }
