--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,92 +2,109 @@
   <main class="site-footer-page-body">
     <div class="site-footer-col-container">
       <div class="site-footer-column">
-        <h4 class="site-footer-title">{{ .Param "footer.learnMore" }}</h4>
-        <ul class="page-foot-nav-ul">
-          <li>
-            <a href="{{ ref . "/" }}">{{ .Param "navigation.home" }}</a>
-          </li>
-          <li>
-            <a href="{{ ref . "about" }}">{{ .Param "navigation.aboutUs" }}</a>
-          </li>
-          <li>
-            <a href="{{ ref . "statutes" }}">{{ .Param "navigation.statutes" }}</a>
-          </li>
-          <li>
-            <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
-          </li>
-          <li>
-            <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
-          </li>
-        </ul>
+        <section class="site-footer-section">
+          <h4 class="site-footer-title">{{ .Param "footer.learnMore" }}</h4>
+          <ul class="page-foot-nav-ul">
+            <li>
+              <a href="{{ ref . "/" }}">{{ .Param "navigation.home" }}</a>
+            </li>
+            <li>
+              <a href="{{ ref . "about" }}">{{ .Param "navigation.aboutUs" }}</a>
+            </li>
+            <li>
+              <a href="{{ ref . "statutes" }}">{{ .Param "navigation.statutes" }}</a>
+            </li>
+            <li>
+              <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
+            </li>
+            <li>
+              <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
+            </li>
+          </ul>
+        </section>
       </div>
 
       <div class="site-footer-column">
-        <h4 class="site-footer-title">{{ .Param "footer.socials" }}</h4>
-        <div class="site-footer-social-links">
-          {{ if .Site.Param "social.twitter" }}
-            <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon twitter"></span></a>
-          {{ end }}
-          {{ if .Site.Param "social.facebook" }}
-            <a target="blank" href="{{ .Site.Param "social.facebook" }}"><span class="icon facebook"></span></a>
-          {{ end }}
-          {{ if .Site.Param "social.linkedin" }}
-            <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon linkedin"></span></a>
-          {{ end }}
-          {{ if .Site.Param "social.github" }}
-            <a target="blank" href="{{ .Site.Param "social.github" }}"><span class="icon github"></span></a>
-          {{ end }}
-          {{ if .Site.Param "social.youtube" }}
-            <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon youtube"></span></a>
-          {{ end }}
-          {{ if .Site.Param "social.mastodon" }}
-            <a target="blank" href="{{ .Site.Param "social.mastodon" }}"><span class="icon mastodon"></span></a>
-          {{ end }}
-          {{ with .OutputFormats.Get "rss" -}}
-            <a target="_blank" href="{{.Permalink}}"><span class="icon rss"></span></a>
-          {{ end }}
-        </div>
-        <h4 class="site-footer-title">{{ .Param "footer.languages" }}</h4>
-        <ul class="site-footer-nav-ul">
-          {{ $siteLanguages := site.Languages }}
-          {{ $pageLang := .Page.Lang }}
-          {{- range .Page.AllTranslations }}
-            {{ $translation := . }}
-            {{- range sort $siteLanguages "Weight" "asc" }}
-              {{- if eq $translation.Lang .Lang }}
-              <li>
-                <a href="{{ $translation.Permalink | relURL }}">
-                  {{ .Params.languageFlag }}
-                  {{ .Params.languageName }}
-                </a>
-              </li>
+        <section class="site-footer-section">
+          <h4 class="site-footer-title">{{ .Param "footer.socials" }}</h4>
+          <div class="site-footer-social-links">
+            {{ if .Site.Param "social.twitter" }}
+              <a target="_blank" href="{{ .Site.Param "social.twitter" }}"><span class="icon twitter"></span></a>
+            {{ end }}
+            {{ if .Site.Param "social.facebook" }}
+              <a target="blank" href="{{ .Site.Param "social.facebook" }}"><span class="icon facebook"></span></a>
+            {{ end }}
+            {{ if .Site.Param "social.linkedin" }}
+              <a target="blank" href="{{ .Site.Param "social.linkedin" }}"><span class="icon linkedin"></span></a>
+            {{ end }}
+            {{ if .Site.Param "social.github" }}
+              <a target="blank" href="{{ .Site.Param "social.github" }}"><span class="icon github"></span></a>
+            {{ end }}
+            {{ if .Site.Param "social.youtube" }}
+              <a target="blank" href="{{ .Site.Param "social.youtube" }}"><span class="icon youtube"></span></a>
+            {{ end }}
+            {{ if .Site.Param "social.mastodon" }}
+              <a target="blank" href="{{ .Site.Param "social.mastodon" }}"><span class="icon mastodon"></span></a>
+            {{ end }}
+            {{ with .OutputFormats.Get "rss" -}}
+              <a target="_blank" href="{{.Permalink}}"><span class="icon rss"></span></a>
+            {{ end }}
+          </div>
+        </section>
+
+        <section class="site-footer-section">
+          <h4 class="site-footer-title">{{ .Param "footer.languages" }}</h4>
+          <ul class="site-footer-nav-ul">
+            {{ $siteLanguages := site.Languages }}
+            {{ $pageLang := .Page.Lang }}
+            {{- range .Page.AllTranslations }}
+              {{ $translation := . }}
+              {{- range sort $siteLanguages "Weight" "asc" }}
+                {{- if eq $translation.Lang .Lang }}
+                <li>
+                  <a href="{{ $translation.Permalink | relURL }}">
+                    {{ .Params.languageFlag }}
+                    {{ .Params.languageName }}
+                  </a>
+                </li>
+                {{- end }}
               {{- end }}
             {{- end }}
-          {{- end }}
-        </ul>
+          </ul>
+        </section>
       </div>
 
       <div class="site-footer-column">
-        <h4 class="site-footer-title">{{ .Param "footer.legal" }}</h4>
-        <p>{{ .Param "footer.legalNote" }}</p>
-        <ul class="site-footer-nav-ul">
-          <li>
-            <a href="#">{{ .Param "footer.legalLink" }}</a>
-          </li>
-        </ul>
+        <section class="site-footer-section">
+          <h4 class="site-footer-title">{{ .Site.Param "footer.partners" }}</h4>
+
+          <ul class="site-footer-partners-ul">
+            {{- range $i, $partner := .Site.Param "partners" }}
+              <li>
+                <a href="{{ $partner.link }}">{{ $partner.name }}</a>
+              </li>
+            {{- end }}
+          </ul>
+        </section>
+
+        <section class="site-footer-section">
+          <h4 class="site-footer-title">{{ .Site.Param "footer.legal" }}</h4>
+          <p class="site-footer-legal-info">
+            {{ .Site.Param "legal.entityName" }}<br>
+            {{ .Site.Param "footer.legalLink" }}:
+            <a target="_blank" href="{{ .Site.Param "legal.entry" }}">
+              {{ .Site.Param "legal.registrationNumber" }}
+            </a>
+          </p>
+        </section>
       </div>
     </div>
   </main>
 </footer>
 
 <section class="site-after-footer">
-  <div class="site-software-note">
-    This website was made possible by amazing <a target="_blank" href="https://en.wikipedia.org/wiki/Free_and_open-source_software">FOSS</a> projects including
-    <a target="_blank" href="//gohugo.io">Hugo</a>
-    and
-    <a target="_blank" href="//nixos.org">NixOS</a>.
-    <br/>
-    Source code is <a taget="_blank" href="{{ .Site.BaseURL }}downloads/source.tar.gz">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.<br>
-    Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.
+  <div class="site-licensing-note">
+    Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.<br>
+    Source code is <a taget="_blank" href="{{ .Site.BaseURL }}downloads/source.tar.gz">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.
   </div>
 </section>
