Add contacts section to footer (#132)
Add contact section to site footer.

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_site-styles.scss
+++ b/assets/scss/_site-styles.scss
@@ -199,6 +199,24 @@ body {
     }
 }
 
+.site-footer-contancts-ul {
+    line-height: 1.5em;
+    font-size: 16px;
+
+    a {
+        text-decoration: none;
+        color: $secondary-color;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    strong {
+        font-weight: 700;
+    }
+}
+
 .site-footer-partners-ul {
     line-height: 1.5em;
 
