improve styling on homepage (#128)
Various improvements to styling of homepage content

- nicer styling in boxes
- more mobile friendly style in single column layout

----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -93,8 +93,9 @@
 
     ul {
         list-style-type: "\1F44D\0009";
-        padding: 0 0 0 48px;
+        padding: 0 0 0 28px;
         font-weight: 600;
+        max-width: 700px;
 
         li {
             margin: 6px 0;
