--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -5,7 +5,7 @@
         <strong>{{ .Param "title" }}</strong> <small>{{ .Param "subTitle" }}</small>
       </h1>
       <p class="home-header-tag-line">
-        {{ .Param "tagLine" | safeHTML }}
+        {{ .Param "tagLine" }}
       </p>
     </div>
     <div class="home-header-join-us-cta">
