--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -3,22 +3,33 @@
 }
 
 .home-header {
+    padding: 32px 0;
 }
 
 .home-header-content {
     @include page-body;
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     padding-top: 72px;
     padding-bottom: 48px;
 
     @include tablet {
         flex-direction: column;
+        gap: 24px;
+        padding-top: 32px;
+        padding-bottom: 0;
+        align-items: stretch;
     }
 }
 
 .home-header-tag {
-    padding: 32px 0;
+    line-height: 1em;
+    max-width: 400px;
+
+    @include tablet {
+        max-width: 100%;
+    }
 }
 
 .home-header-headline {
@@ -47,7 +58,7 @@
 }
 
 .home-header-tag-line {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: 400;
     line-height: 1.1em;
     margin: 12px 0;
@@ -58,7 +69,6 @@
 }
 
 .home-header-join-us-cta {
-    padding-top: 48px;
     font-size: 24px;
     max-width: 300px;
     color: $mutted-color;
@@ -71,7 +81,8 @@
 
 .home-header-join-us-text {
     @include pharagraph;
-    font-size: 22px;
+    font-size: 20px;
+    margin: 12px 0;
 
     a, a:visited {
         color: $primary-color;
@@ -96,7 +107,7 @@
 .home-participate {
     background: $primary-color;
     color: $light-color;
-    padding: 48px 0;
+    padding: 64px 0;
 }
 
 .home-participate-title {
@@ -104,8 +115,9 @@
     border-bottom: solid 10px $secondary-color;
 }
 
-.col-container {
+.home-participate-container {
     @include columns-container;
+    padding-top: 32px;
 }
 
 .home-participate-item {
@@ -113,19 +125,53 @@
 }
 
 .home-participate-content {
-    @include style-md;
     font-size: 17px;
     line-height: 1.6em;
+
+    p {
+        margin: 12px 0;
+    }
+
+    strong {
+        font-weight: 700;
+    }
+
+    em {
+        font-style: italic;
+    }
+
+    a, a:visited {
+        color: $secondary-color;
+        font-weight: 600;
+
+        &:hover, &:active {
+            background: $secondary-color;
+            color: $primary-color;
+        }
+    }
+
+    ul {
+        margin-left: 28px;
+        list-style-type: "\1F44D\0009";
+
+        li {
+            margin: 6px 0;
+        }
+    }
 }
 
 .home-participate-item-title {
     @include title;
-    margin: 64px 0 32px 0;
+    margin: 32px 0;
 }
 
 .home-membership {
     background: $secondary-color;
-    padding: 48px 0 64px 0;
+    padding: 64px 0;
+}
+
+.home-membership-container {
+    @include columns-container;
 }
 
 .home-membership-description {
@@ -135,10 +181,11 @@
 
     a, a:visited, a:active {
         color: $primary-color;
+        font-weight: 700;
     }
 
     a:hover {
-        color: $light-color;
+        color: $secondary-color;
         background: $primary-color;
     }
 }
@@ -159,7 +206,11 @@
 
 .home-membership-item-title {
     @include title;
-    margin: 68px 0 52px 0;
+    margin: 52px 0;
+
+    @include tablet {
+        margin: 24px 0;
+    }
 }
 
 .home-events {
