Break "ukranine flag pattern" in FAQ (#127)
This changes a pattern of repeating colors in FAQ.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_faq.scss
+++ b/assets/scss/_faq.scss
@@ -26,22 +26,22 @@
 }
 
 .faq-item {
-    background: $primary-color;
-    color: $light-color;
+    background: $light-color;
+    color: $dark-color;
     padding: 24px 0;
 
-    &.second {
+    &.first {
+        background: $primary-color;
+        color: $light-color;
+    }
+
+    &.third {
         background: $secondary-color;
         color: $dark-color;
 
         .faq-question-text {
             border-color: $dark-color;
         }
-    }
-
-    &.third {
-        background: $light-color;
-        color: $dark-color;
     }
 }
 
@@ -101,7 +101,7 @@
             margin: 6px 0;
         }
 
-        .second & {
+        .third & {
             list-style-type: "\1F499\0009";
         }
     }
