social urls and instagram (#137)
Closes #117 

url to Mastodon is still missing. I will add it as soon as I get it.


----------
__Please confirm the following:__

- [x] I accept and respect the [statuses of Odborová organizace
pracujících v
ICT](https://ictunion.cz/downloads/ictunion-statutes-en.pdf)
- [x] I'm providing all content changes under the [CC BY
4.0](https://creativecommons.org/licenses/by/4.0/) license

--- a/assets/scss/_icons.scss
+++ b/assets/scss/_icons.scss
@@ -31,4 +31,5 @@
     @include icon('github', '<');
     @include icon('youtube', 'y');
     @include icon('mastodon', ']');
+    @include icon('instagram', 'c');
 }
